# IMAGE

./: .gitignore  CMakeLists.txt  README.md  build.sh  installIMAGE.sh  uninstallIMAGE.sh
TestCase/: CMakeLists.txt  image_class_test.cpp  image_io_test.cpp  image_process_test.cpp
config/: CmakeHelper.cmake.in  IMAGEConfig.cmake.in  IMAGEConfig.h.in  IMAGEConfigVersion.cmake.in
examples/: CMakeLists.txt  feature_detection.cpp  fill_color.cpp
examples/Feature2d/: CMakeLists.txt  feature_detection.cpp
examples/Image/: CMakeLists.txt  add_Channels.cpp  copy_channels.cpp  delete_channel.cpp  fill_color.cpp  image_main.cpp  init.txt  swap_channels.cpp
examples_bin/: image_main
include/: .gitignore  IMAGEConfig.h  define.h  exception.h  image.hpp  image_io.h  image_process.hpp  matching.h  mystring.h  nearest_neighbor.hpp  sift.h  sift.hpp  string.h  timer.h  types.hpp  visualizer.h  visualizer.hpp  visuallizer.h
include/Features2d/: features2d.h
include/IMAGE/: IMAGEConfig.h  define.h  image.hpp  image_io.h  image_process.hpp  image_pyramid.h  matching.h  nearest_neighbor.hpp  sift.hpp  visualizer.hpp
include/IMAGE/cuda_include/: image_process.cuh  process_cuda.h
include/cuda_include/: common.cuh  image.cuh  image_1.cuh  image_process.cuh  image_process_1.cuh  process_cuda.h  process_cuda_1.h  sharedmem.cuh  sharemem.cuh  sift_1.cuh
include/features2d/: Array.h  features2d.h  features2d.hpp  ptr.hpp
lib/: init.txt
result/: README.md
src/: CMakeLists.txt  a.cpp  define.cpp  image_io.cpp  image_process.cpp  image_pyramid.cpp  matching.cpp  sift.cpp  visualizer.cpp
src/Features2d/: Fast.cpp  ORB.cpp  feature2d.cpp  sift.cpp
src/cuda_src/: CMakeLists.txt  cuda_common.cu  image.cu  image_process.cu  image_process_1.cu  image_process_11.cu  sift_1.cu  sift_cuda.cpp
src/features2d/: Array.cpp  Fast.cpp  ORB.cpp  feature2d.cpp  sift.cpp
src_bin/: CMakeLists.txt  add_Channels.cpp  byte_to_float_image.cpp  copy_channels.cpp  delete_channel.cpp  fill_color.cpp  image_main.cpp  image_main_cuda.cpp  swap_channels.cpp
