find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(../../MATH/include)
include_directories(../include)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/examples_bin)
link_directories(${MATH_INCLUDE_DIRS}/../lib)
link_directories(/home/doing/gitHub/MATH/lib)
add_executable(feature_detection feature_detection.cpp)
target_link_libraries(feature_detection image math_util)
target_link_libraries(feature_detection image)
target_link_libraries(feature_detection ${OpenCV_LIBS})